tests/invalid/random_shuffle_keyword_arg/main.py
import random

if __name__ == "__main__":
    xs: list[int] = [1, 2, 3]
    random.shuffle(x=xs)
